# a15kb

./: Cargo.toml  LICENSE  README.md  a15kb.Controller1.xml  build.rs  deploy.sh  install_applet.sh  install_server.sh
examples/: a15kb-qml-plugin.rs  a15kb-repl.rs
plasmoids/a15kb-fans/: metadata.json
plasmoids/a15kb-fans/contents/ui/: FanControls.qml  Section.qml  Separator.qml  TemperatureContainer.qml  TemperatureDisplay.qml  logic.js  main.qml
src/: ec.rs  lib.rs  linux.rs  main.rs  server.rs
